src/components/Toc/style.scss
.toc-list {
  top: 15%;
  left: 76%;
  margin-right: 30px;
  position: fixed;
  border: 2px solid gray;
  border-radius: 2px;
  background-color: white;
  max-height: 350px;
  overflow: auto;
  width: 20%;
}

.toc-header {
  padding: 0.75rem 1.25rem;
  margin-bottom: 0;
  margin-top: 0;
  background-color: rgba(0,0,0,.03);
  border-bottom: 1px solid rgba(0,0,0,.125);
}

ul {
  margin-bottom: 0 !important;
}

li {
  margin-bottom: 0 !important;
}

.sidebar-btns {
  display: none;
  position: fixed;
  bottom: 50px;
  right: 10%;
  z-index: 99;
  font-size: 1.125rem;
  border: none;
  outline: none;
  background-color: transparent;
  color: white;
  cursor: pointer;
  padding: 0.9375rem;
  border-radius: 0.25rem;
  background-image: url("/arrow-up.svg");
  background-repeat: no-repeat;
  width: 50px;
  height: 50px;
  background-position: center;
}

#toggle-toc-btn {
  right: 10%;
  background-image: url("/toggle-toc.svg");
  background-color: cadetblue;
}

#scroll-btn {
  right: 15%;
  background-image: url("/arrow-up.svg");
  background-color: burlywood;
}

@media screen and (max-width: 1200px) {
  .toc-list {
    position: relative;
    left: 20%;
    margin-top: 5%;
    width: 30%;
  }
}

